@@ -6,10 +6,10 @@ include_once("../../class/ficha.class.php");
 
 class MODULO extends ficha{
   public static function onInit(){
-    $access=SIGA::access("ficha");//null,r,rw,a    
-    switch($_REQUEST["action"]){      
+    $access=SIGA::access("ficha");//null,r,rw,a
+    switch($_REQUEST["action"]){
       case "onList_Agregar":
-        header('Content-Type: text/plain; charset=utf-8');        
+        header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onList_Agregar( SIGA::param("id_nomina"),
                                                 SIGA::param("id_periodo"),
                                                 SIGA::paramUpper("text"),
@@ -17,16 +17,16 @@ class MODULO extends ficha{
                                                 SIGA::param("limit"),
                                                 SIGA::param("sort",false)));
         break;
-      
+
       case "onList":
-        header('Content-Type: text/plain; charset=utf-8');        
+        header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onList( SIGA::paramUpper("text"),
                                         SIGA::param("start"),
                                         SIGA::param("limit"),
                                         SIGA::param("sort",false)));
         break;
       case "onNominaPeriodo":
-        header('Content-Type: text/plain; charset=utf-8');        
+        header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onNominaPeriodo( SIGA::param("id_ficha"),
                                                  SIGA::param("id_periodo")));
         break;
@@ -38,7 +38,7 @@ class MODULO extends ficha{
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onGet_Select(SIGA::param("id")));
         break;
-      
+
       case "onAgregar":
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onAgregar($access, SIGA::param("id_nomina"), SIGA::param("id_periodo"), SIGA::param("id_ficha")));
@@ -47,9 +47,10 @@ class MODULO extends ficha{
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onQuitar($access, SIGA::param("id_nomina"), SIGA::param("id_periodo"), SIGA::param("id_ficha")));
         break;
-      
+
       case "onSave":
         header('Content-Type: text/plain; charset=utf-8');
+        $grupo_familiar=json_decode(SIGA::param("grupo_familiar",false),true);
         print json_encode(self::onSave($access,
                                        SIGA::param("id"),
                                        SIGA::paramUpper("nacionalidad"),
@@ -70,44 +71,45 @@ class MODULO extends ficha{
                                        SIGA::param("antiguedad_apn"),
                                        SIGA::param("profesionalizacion_porcentaje"),
                                        SIGA::param("codigo"),
-                                       SIGA::param("activo")));
+                                       SIGA::param("activo"),
+                                       $grupo_familiar));
         break;
-      
+
       case "onGet_ArchivoFoto":
-        header('Content-Type: text/plain; charset=utf-8');        
+        header('Content-Type: text/plain; charset=utf-8');
         self::onGet_ArchivoFoto(SIGA::paramGet("archivo"));
         break;
-      
+
       case "onGet_Archivo":
-        header('Content-Type: text/plain; charset=utf-8');        
+        header('Content-Type: text/plain; charset=utf-8');
         self::onGet_Archivo($access, SIGA::paramGet("archivo"));
         break;
-      
+
       case "onList_Archivo":
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onList_Archivo(SIGA::param("path")));
         break;
-      
+
       case "onUpload_Archivo":
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onUpload_Archivo($access,SIGA::param("path"),$_FILES["upload"]));
         break;
-      
+
       case "onDelete_Archivo":
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onDelete_Archivo($access,SIGA::param("archivo")));
         break;
-      
+
       case "onRename_Archivo":
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onRename_Archivo($access, SIGA::param("archivo"), SIGA::param("archivo_nuevo")));
         break;
-      
+
       case "onAdd_Carpeta":
         header('Content-Type: text/plain; charset=utf-8');
         print json_encode(self::onAdd_Carpeta($access, SIGA::param("carpeta")));
         break;
-      
+
       case "onCss":
       case "css":
         header('Content-Type: text/css; charset=utf-8');
@@ -115,22 +117,22 @@ class MODULO extends ficha{
         break;
       case "onJavascript":
       case "js":
-      case "javascript":  
+      case "javascript":
         header('Content-Type: text/javascript; charset=utf-8');
         print self::onJavascript($access);
         break;
-    }    
+    }
   }
-  
+
   public static function onCss($access){
     return SIGA::css("main.css");
   }
-  
+
   public static function onJavascript($access){
     if(!$access) return;
     return SIGA::js("main.js");
   }
-  
+
 }
 MODULO::onInit();
 ?>
